poideployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: poi
  name: poi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: poi
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: poi
    spec:
      containers:
      - image: registrytvw4385.azurecr.io/tripinsights/poi:1.0
        name: poi
        ports:
        - containerPort: 80
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: poi-service
spec:
  type: ClusterIP
  ports:
  - port: 80
  selector:
    app: poi
